Bug 157117 - Constant jumping to page one when particular page is deleted in Draw
Summary: Constant jumping to page one when particular page is deleted in Draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard:
Keywords: bibisectRequest
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2023-09-06 12:39 UTC by grofaty
Modified: 2025-07-05 17:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description grofaty 2023-09-06 12:39:17 UTC
I frequently create print-to file with browser to PDF file. Then open the file with Draw and edit the page. But this issue can easily be reproducible from new document as well.

1. Open Draw.
2. From right site side bar make sure Navigator is selected.
3. Perform menu Page | New page to get to 5 pages.
4. In right site Navigator position cursor to page 5.
5. Menu Page | Delete Page, page is correctly deleted. But now issue appears Draw jumps to page 1. Now imagine having 20 pages and each page having 50 objects, so Navigator has plenty of entries. Jumping to the first page is pretty annoying. Why? Because most of the time user edits some page e.g. page 15, and then goes to page 16 and deletes it. What user expects? Which page should be displayed? I expect to get previous 17th page, that is now 16th page. So I can easily delete current page (page 16).

This looks like small problem, but it is supper annoying when I have to edit tons of documents and jumping to first page is time consuming and annoying, because I have to constantly remember which page I used to be when I deleted the page.

If I delete last page, I expect to be moved to the new last page.


Tested on Windows 10 and Ubuntu 23.04.

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: sl-SI (en_SI); UI: en-US
Calc: threaded


Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: sl-SI (en_US.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 m_a_riosv 2023-09-06 15:59:59 UTC
Reproducible in
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 410632ac4b8a280e0993e665ffa9cfede8326b49
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

But doing it right-clicking on the page on the left Page-pane, and deleting the page, it stays on the next page.
Comment 2 grofaty 2023-09-07 13:22:09 UTC
As a side note (additional even more annoying problem):
1. Having multiple objects in multiple pages.
2. Click on one of the objects in one of the pages.
3. Now move down with arrow keys.
4. Now you decide you want to delete this object. Press Delete key and object is deleted. But also... position in Navigator gets to Page 1. This is specially annoying if there are 50+ small objects on page and you want to carefully check each one and delete only some of them. I expect using arrow keys and Delete key when being inside Navigator, I should not get disturbed by jump to first page action.

I am just writing this additional issue in the same bug report, because I assume delete page or delete object in page triggers the same action "jump to first page".
Comment 3 Telesto 2023-09-07 21:41:48 UTC
Also in
Versie: 6.3.0.4 (x86)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU-threads: 4; Besturingssysteem: Windows 6.3; UI-render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-taal: nl-NL
Calc: CL

and in
Version: 6.1.6.3
Build ID: 5896ab1714085361c45cf540f76f60673dd96a72
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL

No page menu entry with
Versie: 5.3.5.2 
Build ID: 50d9bf2b0a79cdb85a3814b592608037a682059d
CPU-threads: 4; Besturingssysteem:Windows 6.2; UI-render: GL; Layout Engine: new; 
Locale: nl-NL (nl_NL); Calc: CL

However when adding 'delete page' button to menu by customization and using it works fine..  no jump to first page
Comment 4 Commit Notification 2024-02-05 19:38:35 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6b6849107562b258aa8858e94ff3c07160f07062

tdf#157117 sd: fix page switched to after last page is deleted

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Sherry Elliott 2025-07-05 07:58:33 UTC
I moved from version 7.5 to version 7.6 after reporting an issue, and the issue persists.

I screen recorded step 5 of my first post in my prior post.

Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674 https://geometrydash-subzero.io/
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: sl-SI (en_SI); UI: en-US
Calc: threaded
Comment 6 m_a_riosv 2025-07-05 17:00:29 UTC
(In reply to Sherry Elliott from comment #5)
> I moved from version 7.5 to version 7.6 after reporting an issue, and the
> issue persists.
> ....

Do you see comment #4, the patch is available from ver 24.8, please update to a newer version.

https://www.libreoffice.org/download/download-libreoffice/